# opencv-static-build-with-cuda-cpp--docker-compose

./: README.md  docker-compose.yml
workspace/opencv-dnn-demo/: CMakeLists.txt  main_executable.cpp  opencv-libraries-list.txt
